# claude_moneymaker

./: .env.example  .gitignore  Dockerfile  NOTES.md  README.md  docker-compose.yml  pyproject.toml  test_binance.py
moneymaker/: __init__.py  cli.py  config.py  models.py  web.py
moneymaker/core/: __init__.py  allocator.py  brain.py  engine.py  executor.py  portfolio.py
moneymaker/data/: __init__.py  market.py  sentiment.py
moneymaker/strategies/: __init__.py  base.py  claude_vibes.py  contrarian.py  momentum.py  sentiment.py
