[project]
name = "claude-moneymaker"
version = "0.1.0"
description = "Claude tries to make money trading crypto. What could go wrong?"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "ccxt>=4.0.0",           # Exchange APIs (Binance, Coinbase, etc.)
    "httpx>=0.25.0",         # Async HTTP for sentiment APIs
    "pandas>=2.0.0",         # Data manipulation
    "numpy>=1.24.0",         # Numerical operations
    "pydantic>=2.0.0",       # Config and data models
    "pydantic-settings>=2.0.0",  # Environment config
    "anthropic>=0.39.0",     # Claude API for the brain
    "rich>=13.0.0",          # Pretty terminal output
    "typer>=0.9.0",          # CLI
    "sqlite-utils>=3.35",    # Simple DB for tracking
    "python-dotenv>=1.0.0",  # Environment variables
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "ruff>=0.1.0",
]

[project.scripts]
moneymaker = "moneymaker.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["moneymaker"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W"]
